--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/node": "^18.7.11",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
 }
