--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@types/node": "^18.7.11",
     "@types/supertest": "^2.0.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ts-node": "^10.9.1"
